<resources>
    <string name="app_name">Vassar College Dining</string>
    <string name="profile_button_default">Log In</string>
    <string name="profile_button_logged_in">Profile</string>
    <string name="options_button_label">More Options</string>
    <string name="profile_name_label">Name</string>
    <string name="profile_username_label">Username</string>
    <string name="profile_password_label">Password</string>
    <string name="show_password_button">Show Password</string>
    <string name="hide_password_button">Hide Password</string>
    <string name="profile_preferences_label">Preferences</string>
    <string name="edit_profile_button">Edit</string>
    <string name="menu_select">Which menu would you like to see?</string>
    <string name="deece_button">Gordon Commons/ACDC/Deece</string>
    <string name="retreat_button">The Retreat</string>
    <string name="express_button">Express</string>
    <string name="food_truck_button">Street Eats</string>
    <string name="vegetarian_switch">Vegetarian</string>
    <string name="vegan_switch">Vegan</string>
    <string name="gluten_free_switch">Gluten Free</string>
    <string name="halal_switch">Halal</string>
    <string name="kosher_switch">Kosher</string>
    <string name="humane_switch">Humane</string>
    <string name="seafood_switch">Seafood</string>
    <string name="farm_to_fork_switch">FarmToFork</string>
    <string name="done_editing_profile">Save Edits</string>
    <string name="leave_profile_button">Back</string>
    <string name="login_username_label">Username:</string>
    <string name="login_password_label">Password:</string>
    <string name="login_button">Log In</string>
    <string name="create_profile_button">Create New Profile</string>
    <string name="done_creating_button">Done</string>
    <string name="back_button">Back</string>
    <string name="second_password_label">Re-Enter Password:</string>
    <string name="login_name_label">Name:</string>
    <string name="exit_menu_button">Exit</string>
    <string name="menu_date_label">Date:</string>
    <string name="date_format_message">Please enter date as yyyy-mm-dd, then select the enter button</string>
    <string name="date_set_button">Enter</string>
    <string name="default_date">2001-01-26</string>
    <string name="valid_date_but_unavailable">This location is not open on this date. Please exit and select a new date or location.</string>
    <string name="log_out_button">Log Out</string>
    <string name="submit_button">Submit</string>
    <string name="rate_button">Rate</string>
    <string name="rating_label">Average Rating: %1$f</string>
    <string name="action_settings">Settings</string>
</resources>