<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/menuDateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/optionsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/options_button_label" />

            <TextView
                android:id="@+id/appLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/app_name" />

            <Button
                android:id="@+id/profileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_button_default" />

        </LinearLayout>

        <TextView
            android:id="@+id/dateFormatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_format_message"
            app:layout_constraintBottom_toTopOf="@+id/menuDateLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner" />

        <TextView
            android:id="@+id/menuDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_date_label"
            app:layout_constraintBottom_toTopOf="@+id/menuDateSelect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateFormatLabel" />

        <EditText
            android:id="@+id/menuDateSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@string/default_date"
            app:layout_constraintBottom_toTopOf="@+id/menuSelectPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuDateLabel" />

        <Button
            android:id="@+id/setDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_set_button"
            app:layout_constraintBottom_toTopOf="@+id/menuSelectPrompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuDateSelect" />

        <TextView
            android:id="@+id/menuSelectPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuDateSelect"
            app:layout_constraintBottom_toTopOf="@id/menuOptions"/>

        <LinearLayout
            android:id="@+id/menuOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuSelectPrompt">

            <Button
                android:id="@+id/deeceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deece_button" />

            <Button
                android:id="@+id/retreatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retreat_button" />

            <Button
                android:id="@+id/expressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/express_button" />

            <Button
                android:id="@+id/foodTruckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_truck_button" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
